<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_id">644622492323210</string>
    <string name="app_name">Spothill</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash" translatable="false">SplashActivity</string>
    <string name="title_activity_campaign_detail" translatable="false">CampaignDetail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_campaign_list" translatable="false">CampaignList</string>
    <string name="title_activity_detail">SPOT DETAIL</string>
    <string name="title_activity_list_spots">CAMPAIGNS</string>
    <string name="title_activity_reminder">Reminder</string>
    <string name="title_activity_spots" translatable="false">Spots</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_favorite">Favorite</string>
    <string name="title_activity_kampane">Kampane</string>
    <string name="title_activity_begin" translatable="false">BeginActivity</string>
    <string name="title_activity_tutorial" translatable="false">TutorialActivity</string>
    <string name="title_activity_profile" translatable="false">ProfileActivity</string>
    <string name="title_activity_menu_block" translatable="false">MenuBlockActivity</string>
	<string name="no_favourite_campaigns">No campaigns in FAVOURITES</string>
	<string name="providers">Providers</string>
	<string name="campaigns">Campaigns</string>
	<string name="log_in_user">Log in with account</string>
	<string name="profile">Profile</string>
	<string name="blocked_categories">Blocked categories</string>
	<string name="blocked_providers">Blocked providers</string>
	<string name="help">Help</string>
	<string name="name_surname">Name and surname</string>
	<string name="email">Email</string>
	<string name="male">Male</string>
	<string name="female">Female</string>
	<string name="name">Name</string>
	<string name="surname">Surname</string>
	<string name="old_password">Old password</string>
	<string name="new_password">New password</string>
	<string name="save_profile">SAVE PROFILE</string>
	<string name="campaign_detail">CAMPAIGN DETAIL</string>
	<string name="campaign_detail_help">You will learn more information in the detail of the campaign and you can sort and share the actual spot by using action buttons.</string>
	<string name="no_campaigns_history">No campaigns in HISTORY</string>
	<string name="today">Today</string>
	<string name="this_week">This week</string>
	<string name="all">All</string>
	<string name="blocked">Blocked</string>
	<string name="navigation_bar">Navigation bar</string>
	<string name="navigation_bar_help">Everything is in one place. Campaings around, remainder, favorites and history of your campaigns.</string>
	<string name="no_campaigns_reminder">No campaigns in REMINDER</string>
	<string name="quick_function">QUICK FUNCTION</string>
	<string name="quick_function_help">You can sort spots into various categories or share with friends by gestures pulling from left and right in the campaign overview.</string>
	<string name="campaigns_types">TYPES OF CAMPAIGNS</string>
	<string name="campaigns_types_help">For easier orientation we divided the offer of campaigns into three categories:</string>
	<string name="campaigns_around">No campaigns nearby</string>
	<string name="login_data">LOGIN DATA</string>
	<string name="password">Password</string>
	<string name="registration">Register</string>
	<string name="register_later">Register later</string>
	<string name="facebook">FACEBOOK</string>
	<string name="log_in">LOG IN</string>
	<string name="campaigns_nearby">CAMPAIGNS NEARBY</string>
	<string name="terms_conditions">I agree with terms and conditions</string>
	<string name="registrate">REGISTER</string>
	<string name="ends">Expires:</string>
	<string name="login_title">LOGIN</string>
	<string name="fb_login_failed">Error ocurred while FB login</string>
	<string name="wrong_log_in">Wrong login data! Please try again</string>
	<string name="bt_not_activated">Bluetooth není aktivováno, prosím aktivujte bluetooth.</string>
	<string name="campaigns_title">CAMPAIGNS</string>
	<string name="favourites_title">FAVOURITE</string>
	<string name="history_title">HISTORY</string>
	<string name="reminder_title">REMINDER</string>
	<string name="menu_title">MENU</string>
	<string name="log_out">Log out</string>
	<string name="blocked_categories_title">BLOCKED CATEGORIES</string>
	<string name="blocked_providers_title">BLOCKED PROVIDERS</string>
	<string name="no_categories">No categories</string>
	<string name="no_providers">No providers</string>
	<string name="profile_changed">Profile saved!</string>
	<string name="registration_title">REGISTRATION</string>
	<string name="empty_name">Empty name.</string>
	<string name="empty_surname">Empty surname.</string>
	<string name="empty_email">Empty email.</string>
	<string name="empty_password">Empty password.</string>
	<string name="empty_terms_conditions">You must agree with terms and conditions.</string>
	<string name="registration_succes">Registration sucessful.</string>
	<string name="no_internet_acces">Internet connection unavailable</string>
	<string name="check_internet_connection">No internet connection. Please connect to internet.</string>
	<string name="ok_button">OK</string>
	<string name="settings">Settings</string>
	<string name="this_campaign">This campaign</string>
	<string name="loading_text">Loading...</string>
	<string name="share_text_begin">I\'ve just used</string>
	<string name="share_text_middle">from provider</string>
	<string name="share_text_end">. You can also use benefits of application</string>
</resources>
