<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:focusableInTouchMode="true"
	android:focusable="true"
	android:layout_height="match_parent">

	<include
		android:id="@+id/top_panel"
		layout="@layout/my_panel_layout"
		android:layout_width="fill_parent"
		android:layout_height="55dp" />

	<LinearLayout
		android:id="@+id/linear"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/top_panel"
		android:orientation="vertical">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="25dp"
			android:gravity="center"
			android:text="@string/login_data"
			android:textColor="#065fac"
			android:textSize="20sp" />

		<EditText
			android:id="@+id/email"
			android:layout_width="fill_parent"
			android:layout_height="50dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="10dp"
			android:background="@drawable/background_edit_text"
			android:gravity="center"
			android:hint="@string/email"
			android:inputType="textEmailAddress"
			android:padding="10dp"
			android:singleLine="true" />

		<EditText
			android:id="@+id/password"
			android:layout_width="fill_parent"
			android:layout_height="50dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="10dp"
			android:background="@drawable/background_edit_text"
			android:gravity="center"
			android:hint="@string/password"
			android:padding="10dp"
			android:password="true"
			android:singleLine="true" />

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="30dp"
			android:layout_marginLeft="30dp"
			android:layout_marginRight="30dp"
			android:layout_marginTop="20dp"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/registration_button"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
				android:layout_weight="1"
				android:gravity="center"
				android:text="@string/registration"
				android:textColor="#065fac"
				android:textSize="15sp" />

			<View
				android:layout_width="2px"
				android:layout_height="fill_parent"
				android:background="#eeeeee" />

			<TextView
				android:id="@+id/without"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
				android:layout_weight="1"
				android:gravity="center"
				android:text="@string/register_later"
				android:textColor="#065fac"
				android:textSize="15sp" />

		</LinearLayout>

	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="50dp"
		android:layout_alignParentBottom="true">

		<LinearLayout
			android:id="@+id/facebook"
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:layout_weight="1">

			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
				android:adjustViewBounds="true"
				android:background="#3c599f"
				android:src="@drawable/ic_facebook_login" />

			<TextView
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:background="#2f4a8b"
				android:gravity="center"
				android:paddingLeft="15dp"
				android:paddingRight="15dp"
				android:text="@string/facebook"
				android:textColor="#FFFFFF"
				android:textSize="15sp" />

		</LinearLayout>

		<TextView
			android:id="@+id/login_button"
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:background="#28ce82"
			android:gravity="center"
			android:text="@string/log_in"
			android:textColor="#FFFFFF"
			android:textSize="15sp" />

	</LinearLayout>

</RelativeLayout>