<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:id="@+id/view1"
		android:layout_width="fill_parent"
		android:layout_height="45dp"
		android:background="#065fac"
		android:layout_below="@+id/top_panel"
		android:orientation="horizontal">

		<TextView
			android:layout_width="0dp"
			android:layout_height="fill_parent"
			android:textColor="#FFF"
			android:textSize="17sp"
			android:layout_weight="1"
			android:text="@string/campaigns"
			android:tag="1"
			android:background="#055296"
			android:id="@+id/campage"
			android:gravity="center"/>

		<TextView
			android:layout_width="0dp"
			android:layout_height="fill_parent"
			android:textColor="#FFF"
			android:textSize="17sp"
			android:layout_weight="1"
			android:text="@string/providers"
			android:background="#065fac"
			android:id="@+id/marks"
			android:tag="0"
			android:gravity="center"/>

	</LinearLayout>

	<com.fortysevendeg.swipelistview.SwipeListView
		xmlns:swipe="http://schemas.android.com/apk/res-auto"
		android:id="@+id/listview"
		android:listSelector="#00000000"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_below="@+id/view1"
		swipe:swipeFrontView="@+id/front"
		swipe:swipeBackView="@+id/back"
		android:divider="#FFF"
		android:layout_toLeftOf="@+id/sideIndex"
		android:dividerHeight="0px"/>

	<LinearLayout
		android:id="@+id/sideIndex"
		android:layout_width="20dp"
		android:layout_below="@+id/view1"
		android:layout_height="fill_parent"
		android:background="#065fac"
		android:gravity="center_horizontal"
		android:orientation="vertical"
		android:layout_alignParentRight="true">

		</LinearLayout>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/no_favourite_campaigns"
		android:layout_centerInParent="true"
		android:textColor="#9f9f9f"
		android:id="@+id/place_holder_text"
		android:visibility="gone"
		android:textSize="18sp"/>

</RelativeLayout>