<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:orientation="vertical"
	android:layout_height="match_parent">

	<include
		layout="@layout/my_panel_layout"
		android:layout_width="fill_parent"
		android:id="@+id/top_panel"
		android:layout_height="55dp" />

	<RelativeLayout
		android:layout_width="fill_parent"
		android:id="@+id/login"
		android:layout_height="50dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:layout_marginLeft="10dp"
			android:gravity="center"
			android:id="@+id/login_text"
			android:text="@string/log_in_user"
			android:textSize="16sp" />

		<ImageView
			android:id="@+id/arrow1"
			android:layout_width="15dp"
			android:layout_height="15dp"
			android:layout_alignParentRight="true"
			android:layout_centerVertical="true"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:src="@drawable/ic_arrow_right" />

		<View
			android:layout_width="fill_parent"
			android:layout_height="1dp"
			android:layout_alignParentBottom="true"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:background="#b9b9b9" />

	</RelativeLayout>

	<RelativeLayout
		android:layout_width="fill_parent"
		android:id="@+id/profile"
		android:visibility="gone"
		android:layout_height="50dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:layout_marginLeft="10dp"
			android:gravity="center"
			android:id="@+id/profile_text"
			android:text="@string/profile"
			android:textSize="16sp" />

		<ImageView
			android:id="@+id/arrow22"
			android:layout_width="15dp"
			android:layout_height="15dp"
			android:layout_alignParentRight="true"
			android:layout_centerVertical="true"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:src="@drawable/ic_arrow_right" />

		<View
			android:layout_width="fill_parent"
			android:layout_height="1dp"
			android:layout_alignParentBottom="true"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:background="#b9b9b9" />

	</RelativeLayout>

	<RelativeLayout
		android:layout_width="fill_parent"
		android:id="@+id/block_cat"
		android:layout_height="50dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/blocked_categories"
			android:textSize="16sp"
			android:gravity="center"
			android:layout_marginLeft="10dp"
			android:layout_centerVertical="true"/>

		<ImageView
			android:layout_width="15dp"
			android:layout_height="15dp"
			android:layout_centerVertical="true"
			android:layout_alignParentRight="true"
			android:layout_marginRight="10dp"
			android:layout_marginLeft="10dp"
			android:src="@drawable/ic_arrow_right"/>

		<View
			android:layout_width="fill_parent"
			android:layout_height="1dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_alignParentBottom="true"
			android:background="#b9b9b9"/>

	</RelativeLayout>

	<RelativeLayout
		android:layout_width="fill_parent"
		android:id="@+id/block_pro"
		android:layout_height="50dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/blocked_providers"
			android:textSize="16sp"
			android:gravity="center"
			android:layout_marginLeft="10dp"
			android:layout_centerVertical="true"/>

		<ImageView
			android:layout_width="15dp"
			android:layout_height="15dp"
			android:layout_centerVertical="true"
			android:layout_alignParentRight="true"
			android:layout_marginRight="10dp"
			android:layout_marginLeft="10dp"
			android:src="@drawable/ic_arrow_right"/>

		<View
			android:layout_width="fill_parent"
			android:layout_height="1dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_alignParentBottom="true"
			android:background="#b9b9b9"/>

	</RelativeLayout>

	<RelativeLayout
		android:layout_width="fill_parent"
		android:id="@+id/help"
		android:layout_height="50dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/help"
			android:textSize="16sp"
			android:gravity="center"
			android:layout_marginLeft="10dp"
			android:layout_centerVertical="true"/>

		<ImageView
			android:layout_width="15dp"
			android:layout_height="15dp"
			android:layout_centerVertical="true"
			android:layout_alignParentRight="true"
			android:layout_marginRight="10dp"
			android:layout_marginLeft="10dp"
			android:src="@drawable/ic_arrow_right"/>

		<View
			android:layout_width="fill_parent"
			android:layout_height="1dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_alignParentBottom="true"
			android:background="#b9b9b9"/>

	</RelativeLayout>

</LinearLayout>
